Prevent long code samples from overflowing page

--- a/static/style.css
+++ b/static/style.css
@@ -224,3 +224,6 @@ blockquote {
     display: block;
     margin-bottom: 10px;
 }
+
+/* Keep long code samples within page width, and add a scrollbar */
+pre { overflow-x: scroll; }
